muditwebpvc1.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: mudit
  labels:
    run: msweb
  name: msweb
spec:
  containers:
  - image: nginx
    name: msweb
    ports:
    - containerPort: 80
    volumeMounts:
     - name: msmyvol
       mountPath: /usr/share/nginx/html/

  volumes:
   - name: msmyvol    #volume creation
     persistentVolumeClaim:
      claimName: muditpvc1
