nginx.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: muditpod
spec:
 replicas: 2
 template:
  metadata:
   labels:
    app: hellonginx
  spec:
   containers:
    - name: nginx-pod
      image: muditdocker00/nginx:adhoc
      ports:
       - containerPort: 80
      imagePullPolicy: IfNotPresent
