wordpress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: wpdep
 labels:
  app: wpdep
spec:
 selector:
  matchLabels:
   app: wppod
 template:
  metadata:
   name: wppod
   labels:
    app: wppod
  spec:
   containers:
   - image: wordpress
     name: wpcont
     ports:
     - containerPort: 80
