app_service.yml
apiVersion: v1
kind: Service
metadata:
 name: appservice
 labels:
  app: appservice
spec:
 type: ClusterIP
 ports:
 - port: 80
   targetPort: 80
 selector:
  app: appdep
