games_service.yml
apiVersion: v1
kind: Service
metadata:
 name: gamesservice
 labels:
  app: gamesservice
spec:
 type: ClusterIP
 ports:
 - port: 80
   targetPort: 80
 selector:
  app: gamesdep
