mysql_service.yml
apiVersion: v1
kind: Service
metadata:
 name: dbservice
 labels:
  app: dbservice
spec:
 type: ClusterIP
 ports:
 - port: 3306
   targetPort: 3306
 selector:
  app: mysqlpod
