wordpress_service.yml
apiVersion: v1
kind: Service
metadata:
 name: wpservice
 labels:
  app: wpservice
spec:
 type: NodePort
 ports:
 - port: 80
   targetPort: 80
   nodePort: 30009
 selector:
  app: wppod
