ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /apps
        backend:
          serviceName: appservice
          servicePort: 80
      - path: /games
        backend:
          serviceName: gamesservice
          servicePort: 80
